--- a/review/pr-152/genindex.html
+++ b/review/pr-152/genindex.html
@@ -111,7 +111,9 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignEK9size_typePK8key_typePK10value_typePKbPK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tK10score_type">nv::merlin::HashTable::assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14allocator_typeE">nv::merlin::HashTable::allocator_type (C++ type)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12bucket_countEv">nv::merlin::HashTable::bucket_count (C++ function)</a>
 </li>
@@ -139,16 +141,16 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9HashTableEv">nv::merlin::HashTable::HashTable (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initERK16HashTableOptions">nv::merlin::HashTable::init (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initERK16HashTableOptionsP14allocator_type">nv::merlin::HashTable::init (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tK10score_typeb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tK10score_typebb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tK10score_typebb">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP10BaseKVFileI1K1V1SEK6size_t12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable11load_factorE12cudaStream_t">nv::merlin::HashTable::load_factor (C++ function)</a>
