--- a/review/pr-152/README.html
+++ b/review/pr-152/README.html
@@ -213,7 +213,7 @@ The <code class="docutils literal notranslate"><span class="pre">score_type</spa
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-left"><p><strong>Lru</strong></p></td>
-<td class="text-left"><p>Device clock, in nano second (could be a little difference from host clock).</p></td>
+<td class="text-left"><p>Device clock in a nanosecond, which could differ slightly from host clock.</p></td>
 </tr>
 <tr class="row-odd"><td class="text-left"><p><strong>Lfu</strong></p></td>
 <td class="text-left"><p>Frequency provided by caller via the input parameter of <code class="docutils literal notranslate"><span class="pre">scores</span></code> of <code class="docutils literal notranslate"><span class="pre">insert-like</span></code> APIs as the increment of frequency.</p></td>
