--- a/review/pr-152/genindex.html
+++ b/review/pr-152/genindex.html
@@ -107,13 +107,15 @@
 </li>
       <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy4kLruE">nv::merlin::EvictStrategy::kLru (C++ member)</a>
 </li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy16set_global_epochEK8uint64_t">nv::merlin::EvictStrategy::set_global_epoch (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_i0EN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignEK9size_typePK8key_typePK10value_typePKbPK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignEK9size_typePK8key_typePK10value_typePKbPK10score_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14allocator_typeE">nv::merlin::HashTable::allocator_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12bucket_countEv">nv::merlin::HashTable::bucket_count (C++ function)</a>
 </li>
@@ -137,15 +139,15 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typeP10value_typePbP10score_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_t">[1]</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typeP10value_typeP10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::find_or_insert (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_tK10score_typeb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typeP10value_typeP10score_type12cudaStream_tb">nv::merlin::HashTable::find_or_insert (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_tb">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9HashTableEv">nv::merlin::HashTable::HashTable (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4initERK16HashTableOptionsP14allocator_type">nv::merlin::HashTable::init (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tK10score_typebb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tK10score_typebb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tbb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tbb">[1]</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tK10score_typeb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
