--- a/review/pr-152/genindex.html
+++ b/review/pr-152/genindex.html
@@ -97,15 +97,17 @@
 </li>
       <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategyE">nv::merlin::EvictStrategy (C++ struct)</a>
 </li>
-      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy11kCustomizedE">nv::merlin::EvictStrategy::kCustomized (C++ member)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnumE">nv::merlin::EvictStrategy::EvictStrategyEnum (C++ enum)</a>
 </li>
-      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy9kEpochLfuE">nv::merlin::EvictStrategy::kEpochLfu (C++ member)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum11kCustomizedE">nv::merlin::EvictStrategy::EvictStrategyEnum::kCustomized (C++ enumerator)</a>
 </li>
-      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy9kEpochLruE">nv::merlin::EvictStrategy::kEpochLru (C++ member)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum9kEpochLfuE">nv::merlin::EvictStrategy::EvictStrategyEnum::kEpochLfu (C++ enumerator)</a>
 </li>
-      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy4kLfuE">nv::merlin::EvictStrategy::kLfu (C++ member)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum9kEpochLruE">nv::merlin::EvictStrategy::EvictStrategyEnum::kEpochLru (C++ enumerator)</a>
 </li>
-      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy4kLruE">nv::merlin::EvictStrategy::kLru (C++ member)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum4kLfuE">nv::merlin::EvictStrategy::EvictStrategyEnum::kLfu (C++ enumerator)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum4kLruE">nv::merlin::EvictStrategy::EvictStrategyEnum::kLru (C++ enumerator)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy16set_global_epochEK8uint64_t">nv::merlin::EvictStrategy::set_global_epoch (C++ function)</a>
 </li>
@@ -147,10 +149,10 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tbb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tbb">[1]</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4loadEP10BaseKVFileI1K1V1SEK6size_t12cudaStream_t">nv::merlin::HashTable::load (C++ function)</a>
