--- a/v0.1.0-beta.2/genindex.html
+++ b/v0.1.0-beta.2/genindex.html
@@ -117,7 +117,7 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14allocator_typeE">nv::merlin::HashTable::allocator_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12bucket_countEv">nv::merlin::HashTable::bucket_count (C++ function)</a>
 </li>
