Pushing changes to GitHub Pages.

--- a/review/pr-164/genindex.html
+++ b/review/pr-164/genindex.html
@@ -95,19 +95,29 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/typedef_merlin__hashtable_8cuh_1a5001706db6e977358e7f76ad6773703a.html#_CPPv4I00EN2nv6merlin14EraseIfPredictE">nv::merlin::EraseIfPredict (C++ type)</a>
 </li>
-      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategyE">nv::merlin::EvictStrategy (C++ enum)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategyE">nv::merlin::EvictStrategy (C++ struct)</a>
 </li>
-      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategy11kCustomizedE">nv::merlin::EvictStrategy::kCustomized (C++ enumerator)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnumE">nv::merlin::EvictStrategy::EvictStrategyEnum (C++ enum)</a>
 </li>
-      <li><a href="api/enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html#_CPPv4N2nv6merlin13EvictStrategy4kLruE">nv::merlin::EvictStrategy::kLru (C++ enumerator)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum11kCustomizedE">nv::merlin::EvictStrategy::EvictStrategyEnum::kCustomized (C++ enumerator)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I0000EN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum9kEpochLfuE">nv::merlin::EvictStrategy::EvictStrategyEnum::kEpochLfu (C++ enumerator)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum9kEpochLruE">nv::merlin::EvictStrategy::EvictStrategyEnum::kEpochLru (C++ enumerator)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum4kLfuE">nv::merlin::EvictStrategy::EvictStrategyEnum::kLfu (C++ enumerator)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy17EvictStrategyEnum4kLruE">nv::merlin::EvictStrategy::EvictStrategyEnum::kLru (C++ enumerator)</a>
+</li>
+      <li><a href="api/structnv_1_1merlin_1_1EvictStrategy.html#_CPPv4N2nv6merlin13EvictStrategy16set_global_epochEK8uint64_t">nv::merlin::EvictStrategy::set_global_epoch (C++ function)</a>
+</li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4I000_i0EN2nv6merlin9HashTableE">nv::merlin::HashTable (C++ class)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable15accum_or_assignEK9size_typePK8key_typePK10value_typePKbPK10score_type12cudaStream_tb">nv::merlin::HashTable::accum_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14allocator_typeE">nv::merlin::HashTable::allocator_type (C++ type)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12bucket_countEv">nv::merlin::HashTable::bucket_count (C++ function)</a>
 </li>
@@ -123,13 +133,15 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4II00E0EN2nv6merlin9HashTable8erase_ifE9size_typeRK8key_typeRK10score_type12cudaStream_t">nv::merlin::HashTable::erase_if (C++ function)</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14evict_strategyE">nv::merlin::HashTable::evict_strategy (C++ member)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchE9size_typeK9size_typeP9size_typeP8key_typeP10value_typeP10score_type12cudaStream_t">nv::merlin::HashTable::export_batch (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12export_batchEK9size_typeK9size_typeP8key_typeP10value_typeP10score_type12cudaStream_t">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4II00E0ENK2nv6merlin9HashTable15export_batch_ifEvRK8key_typeRK10score_type9size_typeK9size_typeP9size_typeP8key_typeP10value_typeP10score_type12cudaStream_t">nv::merlin::HashTable::export_batch_if (C++ function)</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typeP10value_typePbP10score_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_t">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typeP10value_typePbP10score_type12cudaStream_t">nv::merlin::HashTable::find (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable4findEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_tb">[1]</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typeP10value_typeP10score_type12cudaStream_tbb">nv::merlin::HashTable::find_or_insert (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_tb">[1]</a>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typeP10value_typeP10score_type12cudaStream_tbb">nv::merlin::HashTable::find_or_insert (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable14find_or_insertEK9size_typePK8key_typePP10value_typePbP10score_type12cudaStream_tbb">[1]</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable9HashTableEv">nv::merlin::HashTable::HashTable (C++ function)</a>
 </li>
@@ -137,7 +149,9 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_type12cudaStream_tbb">nv::merlin::HashTable::insert_and_evict (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_and_evictEK9size_typePK8key_typePK10value_typePK10score_typeP8key_typeP10value_typeP10score_typeP9size_type12cudaStream_tbb">[1]</a>
 </li>
-      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable16insert_or_assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tbb">nv::merlin::HashTable::insert_or_assign (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable8key_typeE">nv::merlin::HashTable::key_type (C++ type)</a>
 </li>
@@ -145,8 +159,6 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable11load_factorE12cudaStream_t">nv::merlin::HashTable::load_factor (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable15max_bucket_sizeEv">nv::merlin::HashTable::max_bucket_size (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable4PredE">nv::merlin::HashTable::Pred (C++ type)</a>
@@ -176,8 +188,6 @@
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions18device_memory_poolE">nv::merlin::HashTableOptions::device_memory_pool (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions3dimE">nv::merlin::HashTableOptions::dim (C++ member)</a>
-</li>
-      <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions14evict_strategyE">nv::merlin::HashTableOptions::evict_strategy (C++ member)</a>
 </li>
       <li><a href="api/structnv_1_1merlin_1_1HashTableOptions.html#_CPPv4N2nv6merlin16HashTableOptions16host_memory_poolE">nv::merlin::HashTableOptions::host_memory_pool (C++ member)</a>
 </li>
