Pushing changes to GitHub Pages.

--- a/master/README.html
+++ b/master/README.html
@@ -468,20 +468,24 @@ docker<span class="w"> </span>run<span class="w"> </span>--gpus<span class="w"> 
 <tr class="row-odd"><th class="text-right head"><p>λ</p></th>
 <th class="text-right head"><p>export_batch</p></th>
 <th class="text-right head"><p>export_batch_if</p></th>
+<th class="text-right head"><p>contains</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>2.087</p></td>
 <td class="text-right"><p>12.258</p></td>
+<td class="text-right"><p>3.121</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>2.045</p></td>
 <td class="text-right"><p>12.447</p></td>
+<td class="text-right"><p>3.094</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>1.950</p></td>
 <td class="text-right"><p>2.657</p></td>
+<td class="text-right"><p>3.096</p></td>
 </tr>
 </tbody>
 </table>
@@ -535,20 +539,24 @@ docker<span class="w"> </span>run<span class="w"> </span>--gpus<span class="w"> 
 <tr class="row-odd"><th class="text-right head"><p>λ</p></th>
 <th class="text-right head"><p>export_batch</p></th>
 <th class="text-right head"><p>export_batch_if</p></th>
+<th class="text-right head"><p>contains</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>0.692</p></td>
 <td class="text-right"><p>10.784</p></td>
+<td class="text-right"><p>3.100</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>0.569</p></td>
 <td class="text-right"><p>10.240</p></td>
+<td class="text-right"><p>3.075</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>0.551</p></td>
 <td class="text-right"><p>0.765</p></td>
+<td class="text-right"><p>3.096</p></td>
 </tr>
 </tbody>
 </table>
@@ -602,20 +610,24 @@ docker<span class="w"> </span>run<span class="w"> </span>--gpus<span class="w"> 
 <tr class="row-odd"><th class="text-right head"><p>λ</p></th>
 <th class="text-right head"><p>export_batch</p></th>
 <th class="text-right head"><p>export_batch_if</p></th>
+<th class="text-right head"><p>contains</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>0.316</p></td>
 <td class="text-right"><p>8.199</p></td>
+<td class="text-right"><p>3.239</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>0.296</p></td>
 <td class="text-right"><p>8.549</p></td>
+<td class="text-right"><p>3.198</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>0.288</p></td>
 <td class="text-right"><p>0.395</p></td>
+<td class="text-right"><p>3.225</p></td>
 </tr>
 </tbody>
 </table>
@@ -668,20 +680,24 @@ docker<span class="w"> </span>run<span class="w"> </span>--gpus<span class="w"> 
 <tr class="row-odd"><th class="text-right head"><p>λ</p></th>
 <th class="text-right head"><p>export_batch</p></th>
 <th class="text-right head"><p>export_batch_if</p></th>
+<th class="text-right head"><p>contains</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>0.318</p></td>
 <td class="text-right"><p>8.086</p></td>
+<td class="text-right"><p>3.122</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>0.294</p></td>
 <td class="text-right"><p>5.549</p></td>
+<td class="text-right"><p>3.111</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>0.287</p></td>
 <td class="text-right"><p>0.393</p></td>
+<td class="text-right"><p>3.075</p></td>
 </tr>
 </tbody>
 </table>
@@ -731,20 +747,24 @@ docker<span class="w"> </span>run<span class="w"> </span>--gpus<span class="w"> 
 <tr class="row-odd"><th class="text-right head"><p>λ</p></th>
 <th class="text-right head"><p>export_batch</p></th>
 <th class="text-right head"><p>export_batch_if</p></th>
+<th class="text-right head"><p>contains</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p>0.50</p></td>
 <td class="text-right"><p>0.316</p></td>
 <td class="text-right"><p>8.181</p></td>
+<td class="text-right"><p>3.073</p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p>0.75</p></td>
 <td class="text-right"><p>0.293</p></td>
 <td class="text-right"><p>8.950</p></td>
+<td class="text-right"><p>3.052</p></td>
 </tr>
 <tr class="row-even"><td class="text-right"><p>1.00</p></td>
 <td class="text-right"><p>0.292</p></td>
 <td class="text-right"><p>0.394</p></td>
+<td class="text-right"><p>3.026</p></td>
 </tr>
 </tbody>
 </table>
