--- a/v0.1.0-beta.2/genindex.html
+++ b/v0.1.0-beta.2/genindex.html
@@ -125,6 +125,8 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable5clearE12cudaStream_t">nv::merlin::HashTable::clear (C++ function)</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable8containsEK9size_typePK8key_typePb12cudaStream_t">nv::merlin::HashTable::contains (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable3dimEv">nv::merlin::HashTable::dim (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable5emptyE12cudaStream_t">nv::merlin::HashTable::empty (C++ function)</a>
