Pushing changes to GitHub Pages.

--- a/review/pr-179/genindex.html
+++ b/review/pr-179/genindex.html
@@ -119,6 +119,8 @@
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign (C++ function)</a>, <a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable6assignEK9size_typePK8key_typePK10value_typePK10score_type12cudaStream_tb">[1]</a>
 </li>
+      <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable13assign_scoresEK9size_typePK8key_typePK10score_type12cudaStream_tb">nv::merlin::HashTable::assign_scores (C++ function)</a>
+</li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4N2nv6merlin9HashTable13assign_valuesEK9size_typePK8key_typePK10value_type12cudaStream_tb">nv::merlin::HashTable::assign_values (C++ function)</a>
 </li>
       <li><a href="api/classnv_1_1merlin_1_1HashTable.html#_CPPv4NK2nv6merlin9HashTable12bucket_countEv">nv::merlin::HashTable::bucket_count (C++ function)</a>
